Fixing spacing for smallest screens

--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@ footer {
 /* Contact */
 #Contact {
     background-color: #F0F1F2;
-    padding: 1rem;
+    padding: 1.5rem;
     margin: 1rem;
     max-width: 700px;
     border-left:3vw solid #87bceb; 
@@ -176,6 +176,8 @@ footer {
 #Contact h3 {
     font-size: 3rem;
     text-align: center;
+    padding: 0;
+    margin: 0;
 }
 #social-feature {
     max-width: 55px;
